# naver_areacode_crawler

./: README.md  crawler.py  main.py  pyproject.toml
